--- a/contact.html
+++ b/contact.html
@@ -4,6 +4,8 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Contact - Zainab's Cooking Website</title>
+    <link rel="stylesheet" href="style.css">
+
 </head>
 <body>
 
@@ -12,7 +14,7 @@
     <h1>Contact Me</h1>
     <nav>
       <a href="index.html">Home</a> |
-      <a href="recipes.html">Recipes</a> |
+      <a href="recipe.html">Recipes</a> |
        <a href="addrecipe.html">Add Recipe</a> |
       <a href="contact.html">Contact</a>
     </nav>
@@ -20,21 +22,38 @@
   </header>
 
   <!-- CONTACT FORM -->
-  <main>
-    <h2>Get in Touch</h2>
-    <form action="submit.html" method="post">
-      <label for="name">Your Name:</label><br>
-      <input type="text" id="name" name="name" placeholder="Enter your name" required><br><br>
+<main>
+  <h2>Get in Touch</h2>
+  <p>Have a question, suggestion, or feedback? Fill out the form below or reach us directly!</p>
 
-      <label for="email">Your Email:</label><br>
-      <input type="email" id="email" name="email" placeholder="Enter your email" required><br><br>
+  <!-- Contact Form -->
+  <form action="submit.html" method="post" class="contact-form">
+    <label for="name">Your Name:</label>
+    <input type="text" id="name" name="name" placeholder="Enter your name" required>
 
-      <label for="message">Message:</label><br>
-      <textarea id="message" name="message" rows="4" cols="40" placeholder="Write your message..."></textarea><br><br>
+    <label for="email">Your Email:</label>
+    <input type="email" id="email" name="email" placeholder="Enter your email" required>
 
-      <input type="submit" value="Send Message">
-    </form>
-  </main>
+    <label for="message">Message:</label>
+    <textarea id="message" name="message" rows="5" placeholder="Write your message..."></textarea>
+
+    <input type="submit" value="Send Message">
+  </form>
+
+  <!-- Contact Info -->
+  <section class="contact-info">
+    <h3>Other Ways to Reach Us</h3>
+    <p>Email: <a href="zainababdulkarim91@gmail.com">zainababdulkarim91@gmail.com</a></p>
+    <p>Phone: +234 808 802 7872</p>
+    <div class="social-links">
+      <a href="#"> Facebook</a>
+      <a href="#"> Instagram</a>
+      <a href="#"> Twitter</a>
+    </div>
+  </section>
+
+
+</main>
 
   <!-- FOOTER -->
   <footer>
