--- a/contact.html
+++ b/contact.html
@@ -59,7 +59,8 @@
   <footer>
     <p>&copy; 2025 Zainab’s Cooking Website | Made with ❤️ during Internship</p>
   </footer>
-
+<script src="script.js"></script>
 </body>
 </html>
+
 
