Fix HTML formatting and structure

--- a/index.html
+++ b/index.html
@@ -51,7 +51,7 @@
     
     </div>
     <div class="hero-img">
-      <img src="img/img1.jpeg" alt="Jollof Rice" class="home-img">
+      <img src="img1.jpeg" alt="Jollof Rice" class="home-img">
     </div>
   </section>
 <!-- Link JS -->
@@ -66,3 +66,4 @@
 
 </body>
 </html>
+
