Fix HTML encoding issues in recipe.html

--- a/recipe.html
+++ b/recipe.html
@@ -40,7 +40,7 @@
   <main class="recipes">
   <!-- Recipe 1 -->
   <article class="recipe-card">
-    <img src="img/img2.jpeg" alt="Jollof Rice">
+    <img src="img2.jpeg" alt="Jollof Rice">
     <h2>Jollof Rice</h2>
     <p>A vibrant, smoky West African rice dish cooked 
       with tomatoes, peppers, and spices, 
@@ -67,7 +67,7 @@
 
   <!-- Recipe 2 -->
   <article class="recipe-card">
-    <img src="img/img3.jpeg" alt="Fried Rice">
+    <img src="img3.jpeg" alt="Fried Rice">
     <h2>Fried Rice</h2>
     <p>A colorful rice dish stir-fried with vegetables, 
       liver or chicken, and spices, 
@@ -93,7 +93,7 @@
 
   <!-- Recipe 3 -->
   <article class="recipe-card">
-    <img src="img/img4.jpeg" alt="Pounded Yam with Egusi Soup">
+    <img src="img4.jpeg" alt="Pounded Yam with Egusi Soup">
     <h2>Pounded Yam with Egusi Soup</h2>
     <p>A classic Nigerian delicacy — soft, stretchy yam paired with
        rich melon seed soup cooked with palm oil, meat, and vegetables.</p>
@@ -119,7 +119,7 @@
 
 <!-- Recipe 4 -->
   <article class="recipe-card">
-    <img src="img/img5.jpeg" alt="Suya">
+    <img src="img5.jpeg" alt="Suya">
   <h2> Suya (Spicy Grilled Meat)</h2>
    <p>Thinly sliced, skewered beef grilled with yaji spice mix, 
     a street food favorite with a smoky, spicy kick.</p>
@@ -142,7 +142,7 @@
   </article>
 <!-- Recipe 5 -->
   <article class="recipe-card">
-    <img src="img/img6.jpeg" alt="Moi Moi">
+    <img src="img6.jpeg" alt="Moi Moi">
     <h2>Moi Moi (Steamed Bean Pudding)</h2>
     <p>A soft and savory pudding made from blended beans, peppers,
        onions, and oil, often served with rice or eaten alone.</p>
@@ -170,7 +170,7 @@
 
   <!-- Recipe 6 -->
   <article class="recipe-card">
-    <img src="img/img7.jpeg" alt="Pepper Soup">
+    <img src="img7.jpeg" alt="Pepper Soup">
     <h2>Pepper Soup (Spicy Broth)</h2>
 
     <p>A hot, spicy broth made with goat meat or fish and 
@@ -206,3 +206,4 @@
 <script src="recipe.js"></script>
 </body>
 </html>
+
